--- a/package.json
+++ b/package.json
@@ -18,22 +18,13 @@
   "keywords": [],
   "description": "",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.1",
+    "@types/express": "github:types/express",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/typescript": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "bcrypt": "^5.1.1",
-    "config": "^3.3.12",
-    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
-    "ts-node": "^10.9.2",
-    "zod": "^3.24.2"
+    "mongoose": "^8.13.2"
   }
 }
